--- a/nbproject/project-moz.properties
+++ b/nbproject/project-moz.properties
@@ -8,4 +8,5 @@ appdescription=Multiple Addon Deactivator (M.A.D) is an add-on that can (de)acti
 mozInstallationName=Mozilla Firefox
 appversion=1.1
 ffexec=/home/wind/bin/icecat-2.0.0.11-g1-i386/icecat
-appid=MAD@ChrisLE.de
+#appid=MAD@ChrisLE.de
+appid=ChrisLE@mozilla.org
