--- a/nbproject/private/project-moz.properties
+++ b/nbproject/private/project-moz.properties
@@ -1,5 +1,5 @@
 #mozilla addon private settings
 #Tue May 24 17:58:58 CEST 2011
 mozInstallationName=Mozilla Firefox
-ffexec=C\:\\Users\\christian lenz\\Desktop\\Firefox 4\\Firefox\\firefox.exe
+ffexec=C:\\Users\\christian lenz.LOGIAMED\\Desktop\\Firefox 4\\Firefox\\firefox.exe
 mozAppName=Mozilla Firefox
