--- a/nbproject/project-moz.properties
+++ b/nbproject/project-moz.properties
@@ -1,10 +1,11 @@
 #mozilla addon settings
-#Mon Jun 27 22:38:15 CEST 2011
+#Sat Jul 09 16:47:33 CEST 2011
 appdisplayname=Multiple Addon Deactivator
+targetApplications=
 appname=MAD
 appdescription=Multiple Addon Deactivator (M.A.D) is an add-on that can (de)activate one, many or each add-on at the same time
 mozInstallationName=Mozilla Firefox
-appversion=1.3
+appversion=1.4
 ffexec=/home/wind/bin/icecat-2.0.0.11-g1-i386/icecat
 appid=ChrisLE@mozilla.org
 auther=ChrisLE
