--- a/nbproject/project-moz.properties
+++ b/nbproject/project-moz.properties
@@ -1,7 +1,7 @@
 #mozilla addon settings
-#Sat Jul 09 16:47:33 CEST 2011
+#Wed Jul 13 23:50:02 CEST 2011
 appdisplayname=Multiple Addon Deactivator
-appname=MAD
+appname=MADeactivator
 appdescription=Multiple Addon Deactivator (M.A.D) is an add-on that can (de)activate one, many or each add-on at the same time
 mozInstallationName=Mozilla Firefox
 appversion=1.4
