Ver 1.6 Some code revision Feature added: check all activated and deactivated add-ons

--- a/nbproject/project-moz.properties
+++ b/nbproject/project-moz.properties
@@ -1,6 +1,7 @@
 #mozilla addon settings
-#Sun Sep 18 10:47:46 CEST 2011
+#Fri Sep 23 21:17:25 CEST 2011
 appdisplayname=Multiple Addon Deactivator
+targetApplications=
 appname=MADeactivator
 appdescription=Multiple Addon Deactivator (M.A.D) is an add-on that can (de)activate one, many or each add-on at the same time
 mozInstallationName=Mozilla Firefox
